Presentation slides updated
More work to be done to fix formatting issues

--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Olympic Games: Trends and Cross-Group Comparisons</title>
+    <title>Olympics and Society – Cold War Politics and Gender Equality in the Arena</title>
     <meta charset="utf-8" />
     <meta name="author" content="Elated Anura   Xinyue, Kamran, Konrat" />
     <meta name="date" content="2022-04-27" />
@@ -12,7 +12,7 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Olympic Games: Trends and Cross-Group Comparisons
+# Olympics and Society – Cold War Politics and Gender Equality in the Arena
 ## US vs USSR, Females relative to Males
 ### Elated Anura <br> Xinyue, Kamran, Konrat
 ### University of Chicago
@@ -29,56 +29,31 @@ class: center, middle, inverse, title-slide
 
 
 
-class: inverse, middle, center
-
-# Using xaringan
-
----
-
-## xaringan
-
-- The presentation is created using the `xaringan` package
-
-- Use `---` to separate slides and `--` for incremental builds
-
+Introduction
 --
 
-- Like this
 - How has the dominance of the Soviet Union (/Russia as its main successor) and the United States changed throughout the cold war and after?
+--
+-
+
+
 - How do NATO and Warsaw Pact member-states compare in terms of medals won at the Olympics?
----
 
-## Layouts
-
-You can use plain text
-
-- or bullet points
-
-.pull-left[
-or text in two columns `\(^*\)`
-]
-.pull-right[
-- like
-- this
-]
-
-.footnote[
-[*] And add footnotes
-]
 
 ---
 
-## Code
 
 
-## Plots
 
 
-#
 
 
+
+Q1: How has the dominance of the Soviet Union (/Russia as its main successor) and the United States changed throughout the cold war and after?
 
 &lt;img src="presentation_files/figure-html/pq1-analysis-plot-1-1.png" width="70%" /&gt;
+
+---
 
 
 
@@ -90,13 +65,14 @@ or text in two columns `\(^*\)`
 &lt;img src="presentation_files/figure-html/female participation-1.png" width="70%" /&gt;
 
 
+---
 
 
 
 
 &lt;img src="presentation_files/figure-html/plot-top15countries-1.png" width="70%" /&gt;
 
----
+
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
