--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -3,20 +3,29 @@
   <head>
     <title>Olympics and Society – Cold War Politics and Gender Equality in the Arena</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Elated Anura   Xinyue, Kamran, Konrat" />
+    <meta name="author" content="Elated Anura   Xinyu, Kamran, Konrat" />
     <meta name="date" content="2022-04-27" />
-    <script src="libs/header-attrs-2.13/header-attrs.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
+.title[
 # Olympics and Society – Cold War Politics and Gender Equality in the Arena
+]
+.subtitle[
 ## US vs USSR, Females relative to Males
-### Elated Anura <br> Xinyue, Kamran, Konrat
+]
+.author[
+### Elated Anura <br> Xinyu, Kamran, Konrat
+]
+.institute[
 ### University of Chicago
+]
+.date[
 ### 2022-04-27
+]
 
 ---
 
@@ -48,9 +57,6 @@ Introduction
 
 
 
-
-
-
 &lt;img src="presentation_files/figure-html/pq1-analysis-plot-1-1.png" width="70%" /&gt;
 
 ---
@@ -71,9 +77,6 @@ Introduction
 
 
 &lt;img src="presentation_files/figure-html/plot-top15countries-1.png" width="70%" /&gt;
-
-
-
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
@@ -122,6 +125,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
