made changes to intro slide
added both questions and data source

--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -31,6 +31,11 @@ class: center, middle, inverse, title-slide
 
 Introduction
 --
+- 
+1. Cold War Politics
+
+
+--
 
 - How has the dominance of the Soviet Union (/Russia as its main successor) and the United States changed throughout the cold war and after?
 --
@@ -38,7 +43,33 @@ Introduction
 
 
 - How do NATO and Warsaw Pact member-states compare in terms of medals won at the Olympics?
+--
+-
 
+
+
+
+
+
+
+2. Gender Equality
+--
+
+
+
+- How has female participation changed in Olympic Games from 1900 to 2016?
+--
+-
+
+
+- Which countries have seen highest contributions from females?
+
+--
+-
+
+
+
+- Data set source: [www.sports-reference.com](www.sports-reference.com)
 
 ---
 
