intro slide formatted
title bold

--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -29,10 +29,10 @@ class: center, middle, inverse, title-slide
 
 
 
-Introduction
+# Introduction
 --
-- 
-1. Cold War Politics
+
+## 1. Cold War Politics
 
 
 --
@@ -52,7 +52,7 @@ Introduction
 
 
 
-2. Gender Equality
+## 2. Gender Equality
 --
 
 
