Added titles, subtitles to all slides
With increments

--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -32,7 +32,7 @@ class: center, middle, inverse, title-slide
 # Introduction
 --
 
-## 1. Cold War Politics
+### 1. Cold War Politics
 
 
 --
@@ -72,6 +72,11 @@ class: center, middle, inverse, title-slide
 - Data set source: [www.sports-reference.com](www.sports-reference.com)
 
 ---
+###The Olympics and the Cold War
+--
+
+####How has the dominance of the Soviet Union (/Russia as its main successor) and the United States changed throughout the cold war and after?
+--
 
 
 
@@ -82,19 +87,33 @@ class: center, middle, inverse, title-slide
 &lt;img src="presentation_files/figure-html/pq1-analysis-plot-1-1.png" width="70%" /&gt;
 
 ---
+###The Olympics and the Cold War
+--
+
+####How do NATO and Warsaw Pact member-states compare in terms of medals won at the Olympics?
+--
 
 
 
 &lt;img src="presentation_files/figure-html/q1-plot-2-1.png" width="70%" /&gt;
 
 ---
+###Gender Equality
+--
+
+####How has female participation changed in Olympic Games from 1900 to 2016?
+--
 
 
 &lt;img src="presentation_files/figure-html/female participation-1.png" width="70%" /&gt;
 
 
 ---
+###Gender Equality
+--
 
+####Which countries have seen highest contributions from females?
+--
 
 
 
