Title and subtitles sizes changed
Further reduced size to fit everything

--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -72,10 +72,10 @@ class: center, middle, inverse, title-slide
 - Data set source: [www.sports-reference.com](www.sports-reference.com)
 
 ---
-###The Olympics and the Cold War
+####The Olympics and the Cold War
 --
 
-####How has the dominance of the Soviet Union (/Russia as its main successor) and the United States changed throughout the cold war and after?
+#####How has the dominance of the Soviet Union (/Russia as its main successor) and the United States changed throughout the cold war and after?
 --
 
 
@@ -87,10 +87,10 @@ class: center, middle, inverse, title-slide
 &lt;img src="presentation_files/figure-html/pq1-analysis-plot-1-1.png" width="70%" /&gt;
 
 ---
-###The Olympics and the Cold War
+####The Olympics and the Cold War
 --
 
-####How do NATO and Warsaw Pact member-states compare in terms of medals won at the Olympics?
+#####How do NATO and Warsaw Pact member-states compare in terms of medals won at the Olympics?
 --
 
 
@@ -98,10 +98,10 @@ class: center, middle, inverse, title-slide
 &lt;img src="presentation_files/figure-html/q1-plot-2-1.png" width="70%" /&gt;
 
 ---
-###Gender Equality
+####Gender Equality
 --
 
-####How has female participation changed in Olympic Games from 1900 to 2016?
+#####How has female participation changed in Olympic Games from 1900 to 2016?
 --
 
 
@@ -109,10 +109,10 @@ class: center, middle, inverse, title-slide
 
 
 ---
-###Gender Equality
+####Gender Equality
 --
 
-####Which countries have seen highest contributions from females?
+#####Which countries have seen highest contributions from females?
 --
 
 
