--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -4,19 +4,28 @@
     <title>Olympics and Society – Cold War Politics and Gender Equality in the Arena</title>
     <meta charset="utf-8" />
     <meta name="author" content="Elated Anura   Xinyu, Kamran, Konrat" />
-    <meta name="date" content="2022-04-27" />
-    <script src="libs/header-attrs-2.13/header-attrs.js"></script>
+    <meta name="date" content="2022-04-28" />
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
+.title[
 # Olympics and Society – Cold War Politics and Gender Equality in the Arena
+]
+.subtitle[
 ## US vs USSR, Females relative to Males
+]
+.author[
 ### Elated Anura <br> Xinyu, Kamran, Konrat
+]
+.institute[
 ### University of Chicago
-### 2022-04-27
+]
+.date[
+### 2022-04-28
+]
 
 ---
 
@@ -84,7 +93,7 @@ class: center, middle, inverse, title-slide
 
 
 
-&lt;img src="presentation_files/figure-html/pq1-analysis-plot-1-1.png" width="70%" /&gt;
+&lt;img src="presentation_files/figure-html/pq1-analysis-plot-1-1.png" width="60%" /&gt;
 
 ---
 ####The Olympics and the Cold War
@@ -95,7 +104,7 @@ class: center, middle, inverse, title-slide
 
 
 
-&lt;img src="presentation_files/figure-html/q1-plot-2-1.png" width="70%" /&gt;
+&lt;img src="presentation_files/figure-html/q1-plot-2-1.png" width="60%" /&gt;
 
 ---
 ####Gender Equality
@@ -105,7 +114,7 @@ class: center, middle, inverse, title-slide
 --
 
 
-&lt;img src="presentation_files/figure-html/female participation-1.png" width="70%" /&gt;
+&lt;img src="presentation_files/figure-html/female participation-1.png" width="60%" /&gt;
 
 
 ---
@@ -117,10 +126,7 @@ class: center, middle, inverse, title-slide
 
 
 
-&lt;img src="presentation_files/figure-html/plot-top15countries-1.png" width="70%" /&gt;
-
-
-
+&lt;img src="presentation_files/figure-html/plot-top15countries-1.png" width="60%" /&gt;
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
@@ -169,6 +175,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
