--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -5,21 +5,43 @@
     <meta charset="utf-8" />
     <meta name="author" content="Elated Anura   Xinyu, Kamran, Konrat" />
     <meta name="date" content="2022-04-28" />
-    <script src="libs/header-attrs-2.13/header-attrs.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
+.title[
 # Olympics and Society
+]
+.subtitle[
 ## Cold War Politics and Gender Equality in the Arena
+]
+.author[
 ### Elated Anura <br> Xinyu, Kamran, Konrat
+]
+.institute[
 ### University of Chicago
+]
+.date[
 ### 2022-04-28
+]
 
 ---
 
+
+&lt;style&gt;
+
+.center2 {
+  margin: 0;
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+&lt;/style&gt;
 
 
 
@@ -83,9 +105,9 @@ class: center, middle, inverse, title-slide
 
 
 
-
-&lt;img src="presentation_files/figure-html/pq1-analysis-plot-1-1.png" width="60%" /&gt;
-
+.center2[
+&lt;img src="presentation_files/figure-html/pq1-analysis-plot-1-1.png" width="100%" /&gt;
+]
 ---
 ####The Olympics and the Cold War
 --
@@ -95,8 +117,9 @@ class: center, middle, inverse, title-slide
 
 
 
-&lt;img src="presentation_files/figure-html/q1-plot-2-1.png" width="60%" /&gt;
-
+.center2[
+&lt;img src="presentation_files/figure-html/q1-plot-2-1.png" width="100%" /&gt;
+]
 ---
 ####Gender Equality
 --
@@ -104,9 +127,9 @@ class: center, middle, inverse, title-slide
 #####How has female participation changed in Olympic Games from 1900 to 2016?
 --
 
-
-&lt;img src="presentation_files/figure-html/female participation-1.png" width="60%" /&gt;
-
+.center2[
+&lt;img src="presentation_files/figure-html/female participation-1.png" width="100%" /&gt;
+]
 
 ---
 ####Gender Equality
@@ -116,11 +139,9 @@ class: center, middle, inverse, title-slide
 --
 
 
-
-&lt;img src="presentation_files/figure-html/plot-top15countries-1.png" width="60%" /&gt;
-
-
-
+.center2[
+&lt;img src="presentation_files/figure-html/plot-top15countries-1.png" width="100%" /&gt;
+]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
@@ -169,6 +190,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
